[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
hyper = { version = "1.9.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
http-body-util = "0.1"
bytes = "1"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.26", features = ["tokio-comp", "aio"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
axum = "0.8"